--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express-session": "^1.14.2",
     "mongoose": "^4.7.1",
     "passport": "^0.3.2",
+    "passport-facebook": "^2.1.1",
     "passport-local": "^1.0.0",
     "q": "^1.4.1"
   }
