--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "express-session": "^1.14.2",
+    "fs": "0.0.1-security",
+    "https": "^1.0.0",
     "mongoose": "^4.7.1",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
